syntax = "proto3";

package pb;

option go_package = "github.com/theme-ce/simple-shop/pb";

// Add item to cart
message AddCartItemRequest {
    int32 cart_id = 1;
    int32 product_id = 2;
    int32 quantity_added = 3;
}

message AddCartItemResponse {
    bool success = 1;
    int32 cart_id = 2;
    int32 product_id = 3;
    int32 quantity_added = 4;
}

// Update Item Quantity in the Cart
message UpdateCartItemQuantityRequest {
    int64 cart_id = 1;
    int64 product_id = 2;
    int64 new_quantity = 3;
}

message UpdateCartItemQuantityResponse {
    bool success = 1;
    string message = 2;
}

// Remove item from cart
message RemoveCartItemRequest {
    int32 cart_id = 1;
    int32 product_id = 2;
}

message RemoveCartItemResponse {
    bool success = 1;
}